<resources>
    <string name="app_name">IVMS Mex</string>
    <string name="Username">Usuario</string>

    <string name="Password">Contraseña</string>
    <string name="confirmPassword">Confirmar contraseña</string>

    <string name="RememberPasswd">Recordar Contraseña</string>
    <string name="IniciaSesion">Iniciar Sesión</string>
    <string name="Register">Pre registro</string>

    <string name="send">Enviar</string>

    <string name="plates">Placas:</string>
    <string name="time">Tiempo:</string>
    <string name="speed">Velocidad:</string>
    <string name="address">Dirección:</string>
    <string name="incidents">Incidencias:</string>
    <string name="emergency">Emergencia</string>

    <string name="back">Regresar</string>

    <string name="delivery_complete">Completa</string>
    <string name="delivery_damage">Sin daños</string>
    <string name="delivery_evidence">Foto Evidencia</string>

    <string name="remission">Ingrese su remisión</string>
    <string name="reason_delay">Ingrese el motivo del retraso</string>

    <string name="traking_delay">Retraso</string>
    <string name="traking_arrival">LLegada con cliente</string>
    <string name="traking_delivery">Entrega</string>
    <string name="traking_homecoming">Regreso a planta</string>

    <string name="incidents_speed">Aceleración:</string>
    <string name="incidents_braking">Frenado:</string>
    <string name="incidents_sustained_speed">Velocidad sostenida:</string>
    <string name="incidents_fatigue">Adminitración de la fatiga:</string>
    <string name="incidents_emergency">Emergencia:</string>

    <string name="incidents_value_init">0%</string>

    <string name="profiler_role">Tipo de usuario:</string>
    <string name="profiler_name">Nombre:</string>
    <string name="profiler_email">Correo:</string>
    <string name="profiler_phone">Teléfono:</string>
    <string name="profiler_employee_number">Número de empleado:</string>
    <string name="profiler_boss">Jefe directo:</string>
    <string name="profiler_boss_email">Correo jefe:</string>
    <string name="profiler_zone">Zona:</string>
    <string name="profiler_location">Localidad:</string>

    <string name="vehicle_plates">Placas:</string>
    <string name="vehicle_model">Modelo:</string>
    <string name="vehicle_responsible">Responsable:</string>
    <string name="vehicle_responsible_email">Email del Responsable:</string>
    <string name="vehicle_type_vechile">Tipo de vehículo:</string>
    <string name="vehicle_zone">Zona:</string>
    <string name="vehicle_location">Localidad:</string>

    <string name="signature">Por favor firme dentro del contorno</string>

    <string name="clean">Limpiar</string>

    <string name="title">Ingrese su titulo</string>

    <string name="start_tracking">Inicio de viaje</string>
    <string name="stop_tracking">Detener Rastreo</string>

    <string name="in_tracking">En rastreo</string>
    <string name="app_continue">Continuar</string>

    <string name="tracking">Rastreo</string>
    <string name="profiler">Perfil</string>
    <string name="vehicle">Vehículo</string>
    <string name="reports">Reportes</string>
    <string name="suggestions">Sugerencias</string>
    <string name="close">Cerrar sesión</string>
    <string name="options">Opciones</string>
    <string name="edit">Editar Perfil</string>
    <string name="change_password">Cambiar contraseña</string>

    <string name="email">Email</string>
    <string name="editing">Editar</string>
    <string name="change_img_profiler">Cambiar imagen</string>

    <string name="descroption_suggestion_entry">Escribe tu opinion o sugerencias sobre la plataforma.</string>

    <string name="description_remember_password">Por favor ingrese su email. Si el email tiene una cuenta ligada recibira instrucciones para su reestablecimiento. </string>
    <string name="description_change_password">Por favor ingrese su nueva contraseña y su confirmación.</string>
    <string name="description_suggestion">Nos interesa saber tu opinion.</string>

    <string name="nameUser">Nombre</string>
    <string name="emailUser">Correo</string>
    <string name="phoneUser">Teléfono</string>
    <string name="employeeNumberUser">Número de usuario</string>

    <string name="error_user_name">Por favor ingrese usuario.</string>
    <string name="error_user_password">Por favor ingrese contraseña.</string>


    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
