<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tracking"
            android:icon="@drawable/ic_tracking"
            android:title="@string/tracking" />
        <item
            android:id="@+id/nav_profiler"
            android:icon="@drawable/ic_profiler"
            android:title="@string/profiler" />
        <item
            android:id="@+id/nav_vehicle"
            android:icon="@drawable/ic_truck"
            android:title="@string/vehicle" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_reports"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_suggestion"
            android:icon="@drawable/ic_email"
            android:title="@string/suggestions" />
    </group>

</menu>
